# clearscale

./: .gitignore  AGENTS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  __init__.py  _axis_values.py  _multiscale.py  _ome_zarr.py  _precomputed.py  _scene.py  _transforms.py  multiscale.py  ome_zarr.py  pyproject.toml  tagged_values.py
.github/workflows/: build-upload-pypi.yaml  ci.yaml
docs/: basics.md  examples.md
src/clearscale/: __init__.py  _axis_values.py  _multiscale.py  _scene.py  _transforms.py  ome_zarr.py
src/clearscale/_services/: ome_zarr.py  precomputed.py
src/clearscale/services/: __init__.py  _ome_zarr.py  _precomputed.py  animal_names.py
tests/: test_axis_values.py  test_multiscale.py  test_readme_examples.py  test_scene.py  test_transforms.py
tests/formats/ome_zarr/: multiscale_examples.py  test_multiscale_from_ome_zarr.py
tests/ome_zarr/: multiscale_examples.py  scene_examples.py  test_multiscale_from_ome_zarr.py  test_multiscale_to_ome_zarr.py  test_scene_from_ome_zarr.py  test_scene_to_ome_zarr.py
tests/precomputed/: test_multiscale_from_precomputed.py  test_public_examples.py
