[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearscale"
version = "0.1.0"
description = "Multiscale abstractions for clearly coded metadata provenance"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["image-metadata", "multiscale", "ome-zarr", "ngff", "ome-ngff", "ngff-zarr", "precomputed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pre-commit", "pytest"]

[tool.black]
line-length = 120
target-version = ["py311"]
