[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearscale"
version = "0.1.0"
authors = [
    {name = "Benedikt T. Best", email = "benedikt.best@embl.de"}
]
maintainers = [
    {name = "Benedikt T. Best", email = "benedikt.best@embl.de"},
    {name = "ilastik team", email = "team@ilastik.org"},
]
description = "Abstractions for clear code about multiscale images"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE", "LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["image-metadata", "multiscale", "ome-zarr", "ngff", "ome-ngff", "ngff-zarr", "precomputed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pre-commit", "pytest"]

[tool.black]
line-length = 120
target-version = ["py311"]
